--- a/WAILT/Settings.xib
+++ b/WAILT/Settings.xib
@@ -114,7 +114,7 @@ Gw
                             <font key="font" metaFont="system"/>
                         </buttonCell>
                         <connections>
-                            <action selector="save:" target="-2" id="3oa-eK-ZnO"/>
+                            <action selector="save:" target="-2" id="6zy-I3-a02"/>
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="n2C-mI-Xia">
